# vcpkg-vs-conan

./: .gitignore  CMakeLists.txt  README.md  auto-build-run.sh  conanfile.txt  main.cpp
custom-package/: conanfile.py  install-all.sh
